Closed
Bug 1375130
Opened 7 years ago
Closed 7 years ago
Crash in mozilla::a11y::LazyInstantiator::GatherTelemetry
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla56
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox54 | --- | unaffected |
firefox55 | --- | unaffected |
firefox56 | --- | fixed |
People
(Reporter: calixte, Assigned: bugzilla)
References
(Blocks 1 open bug)
Details
(Keywords: crash, regression, Whiteboard: [clouseau])
Crash Data
Attachments
(1 file, 1 obsolete file)
1.97 KB,
patch
|
bugzilla
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-0980383b-8b19-4183-9a04-d37420170621.
=============================================================
There are 12 crashes from the same installation in nightly 56 with buildid 20170621030208. In analyzing the backtrace, the regression may have been introduced by patch [1] to fix bug 1323069.
[1] https://hg.mozilla.org/mozilla-central/rev?node=94ba0b72c28ac6fbb6a680c52ab073f10503eb16
Flags: needinfo?(aklotz)
Assignee | ||
Comment 1•7 years ago
|
||
Oops.
I'm not sure why we're failing in there (could be due to OS restrictions), but regardless we shouldn't crash.
Assignee: nobody → aklotz
Status: NEW → ASSIGNED
Flags: needinfo?(aklotz)
Attachment #8880080 -
Flags: review?(eitan)
Comment 2•7 years ago
|
||
Comment on attachment 8880080 [details] [diff] [review]
Add missing return value check
Review of attachment 8880080 [details] [diff] [review]:
-----------------------------------------------------------------
r+ if we can still count failed a11y inits with failed queries (see below).
::: accessible/windows/msaa/LazyInstantiator.cpp
@@ +239,5 @@
> nsCOMPtr<nsIFile> clientExe;
> + if (!GetClientExecutableName(aClientTid, getter_AddRefs(clientExe))) {
> + // We cannot retrieve the client executable name!
> + // Just return true as a failsafe.
> + return true;
Your hunch is QueryFullProcessImageName is failing?
Will we have a clear picture of what the proportion of failed queries are? If not, is it worth recording a fallback reserved name in telemetry (eg. "N/A").
But, I assume we can use our current a11y init numbers as the denominator:
((number of successful exe probes)/(number of a11y instantiations))
Right?
Attachment #8880080 -
Flags: review?(eitan) → review+
Updated•7 years ago
|
Crash Signature: [@ mozilla::a11y::LazyInstantiator::GatherTelemetry] → [@ mozilla::a11y::LazyInstantiator::GatherTelemetry]
[@ RefPtr<T>::assign_assuming_AddRef | mozilla::a11y::LazyInstantiator::AccumulateTelemetry]
Assignee | ||
Comment 3•7 years ago
|
||
(In reply to Eitan Isaacson [:eeejay] from comment #2)
> Comment on attachment 8880080 [details] [diff] [review]
> Add missing return value check
>
> Review of attachment 8880080 [details] [diff] [review]:
> -----------------------------------------------------------------
>
> r+ if we can still count failed a11y inits with failed queries (see below).
>
> ::: accessible/windows/msaa/LazyInstantiator.cpp
> @@ +239,5 @@
> > nsCOMPtr<nsIFile> clientExe;
> > + if (!GetClientExecutableName(aClientTid, getter_AddRefs(clientExe))) {
> > + // We cannot retrieve the client executable name!
> > + // Just return true as a failsafe.
> > + return true;
>
> Your hunch is QueryFullProcessImageName is failing?
>
Yeah, we've got clientExe is null because of some failure. It might not necessarily be QueryFullProcessImageName, it might be OpenThread or OpenProcess failing.
> Will we have a clear picture of what the proportion of failed queries are?
> If not, is it worth recording a fallback reserved name in telemetry (eg.
> "N/A").
>
You know what, I think that is a good idea; I'm going to modify this patch. Failing to resolve is an important data point in its own right.
Assignee | ||
Comment 4•7 years ago
|
||
This patch is basically the same thing but before returning true we record a failure message to the telemetry probe.
Carrying forward r+.
Attachment #8880080 -
Attachment is obsolete: true
Attachment #8880145 -
Flags: review+
Assignee | ||
Comment 5•7 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/866cf6ccf7669a0a9532d91f235b670de20a6072
Bug 1375130: Add missing return value check in a11y::LazyInstantiator call to GetClientExecutableName; r=eeejay
Assignee | ||
Comment 6•7 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/894c7a554519c201fb0736df108ff2a7d09b49c2
Bug 1375130: Add missing guard around call to LazyInstantiator::AccumulateTelemetry; r=bustage
Reporter | ||
Updated•7 years ago
|
Crash Signature: [@ mozilla::a11y::LazyInstantiator::GatherTelemetry]
[@ RefPtr<T>::assign_assuming_AddRef | mozilla::a11y::LazyInstantiator::AccumulateTelemetry] → [@ mozilla::a11y::LazyInstantiator::GatherTelemetry]
[@ RefPtr<T>::assign_assuming_AddRef | mozilla::a11y::LazyInstantiator::AccumulateTelemetry]
[@ base::Histogram::SampleSet::Resize ]
Reporter | ||
Updated•7 years ago
|
Crash Signature: [@ mozilla::a11y::LazyInstantiator::GatherTelemetry]
[@ RefPtr<T>::assign_assuming_AddRef | mozilla::a11y::LazyInstantiator::AccumulateTelemetry]
[@ base::Histogram::SampleSet::Resize ] → [@ mozilla::a11y::LazyInstantiator::GatherTelemetry]
[@ RefPtr<T>::assign_assuming_AddRef | mozilla::a11y::LazyInstantiator::AccumulateTelemetry]
[@ base::Histogram::SampleSet::Resize ]
[@ mozilla::a11y::LazyInstantiator::AccumulateTelemetry ]
Comment 7•7 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/866cf6ccf766
https://hg.mozilla.org/mozilla-central/rev/894c7a554519
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Updated•7 years ago
|
Crash Signature: [@ mozilla::a11y::LazyInstantiator::GatherTelemetry]
[@ RefPtr<T>::assign_assuming_AddRef | mozilla::a11y::LazyInstantiator::AccumulateTelemetry]
[@ base::Histogram::SampleSet::Resize ]
[@ mozilla::a11y::LazyInstantiator::AccumulateTelemetry ] → [@ mozilla::a11y::LazyInstantiator::GatherTelemetry]
[@ RefPtr<T>::assign_assuming_AddRef | mozilla::a11y::LazyInstantiator::AccumulateTelemetry]
[@ base::Histogram::SampleSet::Resize ]
[@ mozilla::a11y::LazyInstantiator::AccumulateTelemetry ]
[@ nsCO…
Comment 8•7 years ago
|
||
Users on today's nightly are still crashing :(
https://crash-stats.mozilla.com/report/index/076e9b6d-8158-4b97-8dd4-c64800170623#tab-details
Status: RESOLVED → REOPENED
Flags: needinfo?(aklotz)
Resolution: FIXED → ---
Target Milestone: mozilla56 → ---
Assignee | ||
Comment 9•7 years ago
|
||
Different bug. Moving those signatures over to bug 1375912.
Status: REOPENED → RESOLVED
Crash Signature: [@ mozilla::a11y::LazyInstantiator::GatherTelemetry]
[@ RefPtr<T>::assign_assuming_AddRef | mozilla::a11y::LazyInstantiator::AccumulateTelemetry]
[@ base::Histogram::SampleSet::Resize ]
[@ mozilla::a11y::LazyInstantiator::AccumulateTelemetry ]
[@ nsCO… → [@ mozilla::a11y::LazyInstantiator::GatherTelemetry]
Closed: 7 years ago → 7 years ago
Flags: needinfo?(aklotz)
OS: Windows 10 → Windows
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Comment 10•7 years ago
|
||
This is still visible as topcrash #6 in the Windows nightlies of 20170622030208.
You need to log in
before you can comment on or make changes to this bug.
Description
•