Bug 1375130: Add missing return value check in a11y::LazyInstantiator call to GetClientExecutableName; r=eeejay

MozReview-Commit-ID: JAULVCzMn60